--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="keyframes.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="projetos.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
 <!--  -->
@@ -16,7 +18,7 @@
     <div class="div-header">
         <h1>OLÁ!, EU SOU</h1>
         <h1>ARTHUR BERGAMASCKI</h1>
-        <h2>Estudante/Programador Front-End</h2>
+        <h2>Estudante/Programador Full-Stack</h2>
         <button>SEGUIR EM FRENTE</button>
     </div>
 </header>
@@ -41,7 +43,18 @@
             <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi laborum repellat ipsam vero accusamus odio labore cumque dolor quam porro dolores impedit fugit iste, corrupti maiores voluptas exercitationem blanditiis!</h2>
             <button>Ver projeto</button>
         </div>
-        <img src="" alt="">
+        <img src="calculadora.jpeg" alt="">
+    </div>
+</section>
+<!--  -->
+<section class="projetos-2">
+    <div class="div-projetos-2">
+        <div class="projeto-2">
+            <h1>Nome projeto</h1>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores nisi laborum repellat ipsam vero accusamus odio labore cumque dolor quam porro dolores impedit fugit iste, corrupti maiores voluptas exercitationem blanditiis!</h2>
+            <button>Ver projeto</button>
+        </div>
+        <img src="calculadora2.jpeg" alt="">
     </div>
 </section>
 <!--  -->
